# haruna

./: .gitignore  CMakeLists.txt  README.md  Screenshots.md  appimage-amd64.yaml  org.freedesktop.ScreenSaver.xml  settings.kcfg  settings.kcfgc  settings.ui
.debpkg/DEBIAN/: control
.github/: FUNDING.yml
.github/workflows/: appimage-release.yml  appimage.yml  debian.yml
LICENSES/: WTFPL.txt
cmake/: FindLibmpv.cmake
data/: 256-apps-com.georgefb.haruna.svg.license  CMakeLists.txt  com.georgefb.haruna.appdata.xml  com.georgefb.haruna.desktop
data/color-schemes/: Breeze.colors.license  BreezeDark.colors  BreezeHighContrast.colors  BreezeLight.colors  CMakeLists.txt
data/screenshots/: 1. haruna.png.license  2. haruna playlist.png.license
help/: .template.txt.kate-swp  GeneralSettings.html  PlaybackSettings.html  VideoSettings.html  help.qrc
src/: CMakeLists.txt  _debug.h  application.cpp  application.h  haction.cpp  haction.h  lockmanager.cpp  lockmanager.h  main.cpp  mpvobject.cpp  mpvobject.h  qml.qrc  qml.qrc.license  qthelper.h  settings.cpp  settings.h  subtitlesfoldersmodel.cpp  subtitlesfoldersmodel.h  thumbnailimageprovider.cpp  thumbnailimageprovider.h  track.cpp  track.h  tracksmodel.cpp  tracksmodel.h  videoitem.cpp  videoitem.h  videolist.cpp  videolist.h  videolistmodel.cpp  worker.cpp  worker.h
src/Settings/: audiosettings.cpp  audiosettings.h  generalsettings.cpp  generalsettings.h  mousesettings.cpp  mousesettings.h  playbacksettings.cpp  playbacksettings.h  playlistsettings.cpp  playlistsettings.h  settings.cpp  settings.h  subtitlessettings.cpp  subtitlessettings.h  videosettings.cpp  videosettings.h
src/mpris2/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h
src/playlist/: CMakeLists.txt  playlist.cpp  playlist.h  playlistitem.cpp  playlistitem.h  playlistmodel.cpp  playlistmodel.h
src/qml/: Actions.qml  Footer.qml  HProgressBar.qml  Header.qml  MpvVideo.qml  Osd.qml  PlayList.qml  PlayListItem.qml  PlayListItemCompact.qml  PlayListItemWithThumbnail.qml  VideoProgressBar.qml  VolumeSlider.qml  main.qml
src/qml/Components/: Label.qml  SettingsFlickable.qml
src/qml/Haruna/Components/: ImageAdjustmentSlider.qml  LabelWithTooltip.qml  SelectActionPopup.qml  SettingsBasePage.qml  SettingsHeader.qml  qmldir
src/qml/Menus/: AudioMenu.qml  FileMenu.qml  HelpMenu.qml  PlaybackMenu.qml  SettingsMenu.qml  SubtitlesMenu.qml  TrackMenuItems.qml  ViewMenu.qml
src/qml/Settings/: Audio.qml  ColorAdjustments.qml  ColorAdjustmentsSettings.qml  General.qml  GeneralSettings.qml  HarunaSettings.qml  Mouse.qml  Navigation.qml  Playback.qml  Playlist.qml  SelectActionPopup.qml  SettingsEditor.qml  Subtitles.qml  SubtitlesFolders.qml  VideoSettings.qml
src/settings/: audiosettings.kcfg  audiosettings.kcfgc  generalsettings.h  generalsettings.kcfg  generalsettings.kcfgc  mousesettings.cpp  mousesettings.kcfg  mousesettings.kcfgc  playbacksettings.kcfg  playbacksettings.kcfgc  playlistsettings.h  playlistsettings.kcfg  playlistsettings.kcfgc  settings.cpp  settings.h  subtitlessettings.h  subtitlessettings.kcfg  subtitlessettings.kcfgc  videosettings.kcfg  videosettings.kcfgc
